[package]
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
categories = ["embedded", "no-std"]
description = "Examples of using the APDS9960 digital proximity, ambient light, RGB and gesture sensor through the apds9960 driver."
keywords = ["proximity", "light", "rgb", "gesture"]
license = "MIT OR Apache-2.0"
name = "apds9960-examples"
version = "0.1.0"
edition = "2018"

[dependencies]
apds9960 = { git = "https://github.com/eldruin/apds9960-rs" }
ssd1306 = "0.2"
embedded-graphics = "0.4.4"
cortex-m = "0.5.0"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"
stm32f30x = "0.7.1"
f3 = "0.6.1"
shared-bus = { version = "0.1.4", features = ["cortexm"] }
heapless = "0.4.0"
nb = "0.1"


[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations
